--- a/rest/src/main/resources/application.yml
+++ b/rest/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/devDB?useSSL=false
+    username:
+    password:
   flyway:
     locations: classpath:db/migration
-    enabled: false
