--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
                     <version>3.1.1</version>
                     <executions>
                         <execution>
-                            <id>Jar Tests Package</id>
+                            <id>jar tests package</id>
                             <phase>package</phase>
                             <goals>
                                 <goal>test-jar</goal>
