--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -44,7 +44,7 @@
     <dependency>
       <groupId>com.kalbob</groupId>
       <artifactId>service</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.parent.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -54,13 +54,28 @@
     <dependency>
       <groupId>com.kalbob</groupId>
       <artifactId>service</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.kalbob</groupId>
+      <artifactId>common</artifactId>
+      <version>${project.parent.version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.kalbob</groupId>
+      <artifactId>data</artifactId>
+      <version>${project.parent.version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.kalbob</groupId>
       <artifactId>service</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.parent.version}</version>
       <type>test-jar</type>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
