--- a/service/pom.xml
+++ b/service/pom.xml
@@ -23,13 +23,21 @@
     <dependency>
       <groupId>com.kalbob</groupId>
       <artifactId>data</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.kalbob</groupId>
+      <artifactId>common</artifactId>
+      <version>${project.parent.version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.kalbob</groupId>
       <artifactId>data</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.parent.version}</version>
       <type>test-jar</type>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
