--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,13 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <!-- spring -->
         <spring-boot.version>2.1.2.RELEASE</spring-boot.version>
         <spring-boot-admin.version>2.1.1</spring-boot-admin.version>
-        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+        <!-- utils -->
+        <datafactory.version>0.8</datafactory.version>
+        <javafaker.version>0.17.2</javafaker.version>
+
     </properties>
 
 
@@ -58,13 +62,13 @@
         <dependency>
             <groupId>org.fluttercode.datafactory</groupId>
             <artifactId>datafactory</artifactId>
-            <version>0.8</version>
+            <version>${datafactory.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.github.javafaker</groupId>
             <artifactId>javafaker</artifactId>
-            <version>0.17.2</version>
+            <version>${javafaker.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -88,6 +92,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.0</version>
                     <configuration>
                         <source>${java.version}</source>
                         <target>${java.version}</target>
@@ -141,7 +146,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
-                    <version>${maven-release-plugin.version}</version>
+                    <version>2.5.3</version>
                     <configuration>
                         <tagNameFormat>v@{project.version}</tagNameFormat>
                         <autoVersionSubmodules>true</autoVersionSubmodules>
@@ -149,6 +154,17 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
