--- a/app-api/src/test/resources/application-test.yml
+++ b/app-api/src/test/resources/application-test.yml
@@ -1,6 +1,7 @@
 spring:
-  profiles:
-    include: mysql
+  flyway:
+    locations: classpath:db/migration
+    enabled: false
   devtools:
     restart:
       enabled: false
