--- a/app-api/src/test/resources/application.yml
+++ b/app-api/src/test/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
   profiles:
-    active: dev
+    active: test
   autoconfigure:
     exclude: org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
