--- a/app-api/src/test/resources/application.yml
+++ b/app-api/src/test/resources/application.yml
@@ -1,5 +1,68 @@
 spring:
   profiles:
-    active: test
+    active: ut
+    include: local, hibernate
+
+---
+spring:
+  profiles:
+    active: it
+    include: local, flyway
+
+---
+spring:
+  profiles:
+    active: local
+  devtools:
+    restart:
+      enabled: false
+    livereload:
+      enabled: false
+  datasource:
+    username: root
+    password: kpwd
+  jpa:
+    show-sql: true
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+logging:
+  level:
+    org:
+      springframework: INFO
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
+---
+spring:
+  profiles:
+    active: flyway
+  flyway:
+    locations: classpath:db/migration
+    enabled: true
   autoconfigure:
-    exclude: org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
+    exclude:
+      - org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
+  datasource:
+    url: jdbc:mysql://localhost:3306/fly_DB?useSSL=false&allowPublicKeyRetrieval=true
+  jpa:
+    hibernate:
+      ddl-auto: validate
+
+---
+spring:
+  profiles:
+    active: hibernate
+  autoconfigure:
+    exclude:
+      - org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
+      - org.springframework.boot.autoconfigure.flyway.FlywayAutoConfiguration
+  datasource:
+    url: jdbc:mysql://localhost:3306/local_DB?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+  jpa:
+    generate-ddl: true
+    hibernate:
+      ddl-auto: update
+
+
