--- a/app-client/pom.xml
+++ b/app-client/pom.xml
@@ -4,9 +4,9 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>app-api</artifactId>
+  <artifactId>app-client</artifactId>
   <packaging>jar</packaging>
-  <description>App API</description>
+  <description>App Client</description>
 
   <parent>
     <groupId>com.kalbob</groupId>
@@ -48,12 +48,6 @@
       <version>${spring-boot.version}</version>
     </dependency>
 
-    <!-- service -->
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-quartz</artifactId>
-    </dependency>
-
     <!-- data -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -74,33 +68,6 @@
     <dependency>
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-rest-hal-browser</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.flywaydb</groupId>
-      <artifactId>flyway-core</artifactId>
-    </dependency>
-
-    <!-- app-client -->
-    <dependency>
-      <groupId>com.kalbob</groupId>
-      <artifactId>app-client</artifactId>
-      <version>${parent.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.kalbob</groupId>
-      <artifactId>app-client</artifactId>
-      <version>${parent.version}</version>
-      <type>test-jar</type>
     </dependency>
 
   </dependencies>
