--- a/app-api/pom.xml
+++ b/app-api/pom.xml
@@ -94,12 +94,12 @@
     <dependency>
       <groupId>com.kalbob</groupId>
       <artifactId>app-client</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.parent.version}</version>
     </dependency>
     <dependency>
       <groupId>com.kalbob</groupId>
       <artifactId>app-client</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.parent.version}</version>
       <type>test-jar</type>
     </dependency>
 
