--- a/app-api/src/test/resources/application.yml
+++ b/app-api/src/test/resources/application.yml
@@ -1,18 +1,17 @@
 spring:
   profiles:
     active: ut
-    include: local, hibernate
-
+    include: base, hibernate
+a:
+  ut
 ---
 spring:
   profiles:
-    active: it
-    include: local, flyway
-
+    #active: it
+    #include: base, flyway
 ---
 spring:
-  profiles:
-    active: local
+  profiles: base
   devtools:
     restart:
       enabled: false
@@ -33,11 +32,11 @@ management:
     web:
       exposure:
         include: "*"
-
+a:
+  base
 ---
 spring:
-  profiles:
-    active: flyway
+  profiles: flyway
   flyway:
     locations: classpath:db/migration
     enabled: true
@@ -48,12 +47,12 @@ spring:
     url: jdbc:mysql://localhost:3306/fly_DB?useSSL=false&allowPublicKeyRetrieval=true
   jpa:
     hibernate:
-      ddl-auto: validate
-
+      ddl-auto: update
+a:
+  flyway
 ---
 spring:
-  profiles:
-    active: hibernate
+  profiles: hibernatet
   autoconfigure:
     exclude:
       - org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
@@ -64,5 +63,7 @@ spring:
     generate-ddl: true
     hibernate:
       ddl-auto: update
-
-
+a:
+  hibernate
+b:
+  banana
