--- a/app-api/src/test/resources/application-it.yml
+++ b/app-api/src/test/resources/application-it.yml
@@ -1,9 +1,12 @@
 spring:
   profiles:
-    active: local
-    include: base, flap
+    active: it
+    include: base, flyway
+  test:
+    database:
+      replace: none
 a:
-  local
+  it
 ---
 spring:
   profiles: base
@@ -39,10 +42,11 @@ spring:
     exclude:
       - org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
   datasource:
-    url: jdbc:mysql://localhost:3306/local_DB?useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/fly_DB?useSSL=false&allowPublicKeyRetrieval=true
   jpa:
     hibernate:
       ddl-auto: update
+
 a:
   flyway
 ---
@@ -53,7 +57,7 @@ spring:
       - org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
       - org.springframework.boot.autoconfigure.flyway.FlywayAutoConfiguration
   datasource:
-    url: jdbc:mysql://localhost:3306/local_DB?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/localb_DB?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
   jpa:
     generate-ddl: true
     hibernate:
