--- a/app-api/src/test/resources/application-ut.yml
+++ b/app-api/src/test/resources/application-ut.yml
@@ -6,11 +6,6 @@ a:
   ut
 ---
 spring:
-  profiles:
-    #active: it
-    #include: base, flyway
----
-spring:
   profiles: base
   devtools:
     restart:
@@ -52,13 +47,13 @@ a:
   flyway
 ---
 spring:
-  profiles: hibernatet
+  profiles: hibernate
   autoconfigure:
     exclude:
       - org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
       - org.springframework.boot.autoconfigure.flyway.FlywayAutoConfiguration
   datasource:
-    url: jdbc:mysql://localhost:3306/local_DB?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/localb_DB?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
   jpa:
     generate-ddl: true
     hibernate:
