--- a/app-api/src/test/resources/application-it.yml
+++ b/app-api/src/test/resources/application-it.yml
@@ -1,7 +1,6 @@
 spring:
   profiles:
-    active: it
-    include: base, flyway
+    include: local, it_db
   test:
     database:
       replace: none
@@ -9,32 +8,7 @@ a:
   it
 ---
 spring:
-  profiles: base
-  devtools:
-    restart:
-      enabled: false
-    livereload:
-      enabled: false
-  datasource:
-    username: root
-    password: kpwd
-  jpa:
-    show-sql: true
-    database-platform: org.hibernate.dialect.MySQL8Dialect
-logging:
-  level:
-    org:
-      springframework: INFO
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-a:
-  base
----
-spring:
-  profiles: flyway
+  profiles: it_db
   flyway:
     locations: classpath:db/migration
     enabled: true
@@ -42,27 +16,10 @@ spring:
     exclude:
       - org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
   datasource:
-    url: jdbc:mysql://localhost:3306/it_DB?useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/it_db?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
+a:
+  it_db
 
-a:
-  flyway
----
-spring:
-  profiles: hibernate
-  autoconfigure:
-    exclude:
-      - org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
-      - org.springframework.boot.autoconfigure.flyway.FlywayAutoConfiguration
-  datasource:
-    url: jdbc:mysql://localhost:3306/ut_DB?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
-  jpa:
-    generate-ddl: true
-    hibernate:
-      ddl-auto: update
-a:
-  hibernate
-b:
-  banana
