--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,12 @@ services:
       MYSQL_ROOT_PASSWORD: 'kpwd'
     ports:
       # <Port exposed> : <MySQL Port running inside container>
-      - '3306:3306'
+      - '3307:3306'
     expose:
-      # Opens port 3306 on the container
-      - '3306'
+      # Opens port 3307 on the container
+      - '3307'
     volumes:
-      - local_DB:/var/lib/mysql
+      - local_db:/var/lib/mysql
 
 volumes:
-  local_DB:
+  local_db:
