--- a/app-api/src/main/resources/application-local.yml
+++ b/app-api/src/main/resources/application-local.yml
@@ -42,15 +42,15 @@ spring:
     exclude:
       - org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
   datasource:
-    url: jdbc:mysql://localhost:3307/local_db?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3307/app_local_db?useSSL=false&allowPublicKeyRetrieval=true
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
 a:
   local_db
 ---
 spring:
-  profiles: mem_db
+  profiles: h2_db
   h2:
     console:
       enabled: true
@@ -61,7 +61,7 @@ spring:
       - org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
       - org.springframework.boot.autoconfigure.flyway.FlywayAutoConfiguration
   datasource:
-    url: jdbc:h2:~/mem_db;AUTO_SERVER=TRUE
+    url: jdbc:h2:~/h2_db;AUTO_SERVER=TRUE
     username: sa
     password:
   jpa:
@@ -69,4 +69,4 @@ spring:
       ddl-auto: create-drop
     database-platform: org.hibernate.dialect.H2Dialect
 a:
-  mem_db
+  h2_db
