--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,9 @@ services:
       - '3308:3306'
     expose:
       - '3308'
+    volumes:
+      - app_it_db:/var/lib/mysql
 
 volumes:
   app_local_db:
+  app_it_db:
