--- a/app-api/src/main/resources/application-local.yml
+++ b/app-api/src/main/resources/application-local.yml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    include: base, local_db
+    include: base, local_db_hibernate
 a:
   local
 ---
@@ -37,7 +37,7 @@ spring:
   profiles: local_db
   flyway:
     locations: classpath:db/migration
-    enabled: true
+    enabled: false
   autoconfigure:
     exclude:
       - org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
@@ -45,9 +45,26 @@ spring:
     url: jdbc:mysql://localhost:3307/app_local_db?useSSL=false&allowPublicKeyRetrieval=true
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create
 a:
   local_db
+---
+spring:
+  profiles: local_db_hibernate
+  flyway:
+    locations: classpath:db/migration
+    enabled: false
+  autoconfigure:
+    exclude:
+      - org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
+      - org.springframework.boot.autoconfigure.flyway.FlywayAutoConfiguration
+  datasource:
+    url: jdbc:mysql://localhost:3307/app_local_db?useSSL=false&allowPublicKeyRetrieval=true
+  jpa:
+    hibernate:
+      ddl-auto: update
+a:
+  local_db_hibernate
 ---
 spring:
   profiles: h2_db
