--- a/app-api/src/test/resources/application-it.yml
+++ b/app-api/src/test/resources/application-it.yml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    include: local, it_db
+    include: local, it_db_hibernate
   test:
     database:
       replace: none
@@ -22,4 +22,21 @@ spring:
       ddl-auto: validate
 a:
   it_db
+---
+spring:
+  profiles: it_db_hibernate
+  flyway:
+    locations: classpath:db/migration
+    enabled: false
+  autoconfigure:
+    exclude:
+      - org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
+      - org.springframework.boot.autoconfigure.flyway.FlywayAutoConfiguration
+  datasource:
+    url: jdbc:mysql://localhost:3308/app_it_db?useSSL=false&allowPublicKeyRetrieval=true
+  jpa:
+    hibernate:
+      ddl-auto: update
+a:
+  it_db_hibernate
 
