--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,6 @@
     <maven-help-plugin.version>3.1.1</maven-help-plugin.version>
     <!-- docker -->
     <jib-maven-plugin.version>1.3.0</jib-maven-plugin.version>
-    <aws.environment>dev</aws.environment>
-    <aws.region>us-east-1</aws.region>
     <!-- spring -->
     <spring-boot.version>2.1.2.RELEASE</spring-boot.version>
     <spring-boot-admin.version>2.1.1</spring-boot-admin.version>
@@ -157,6 +155,12 @@
   </profiles>
 
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
     <pluginManagement>
       <plugins>
         <plugin>
@@ -262,7 +266,7 @@
               </auth>
             </from>
             <to>
-              <image>docker.io/kalyan27/app-api-${aws.environment}:v10</image>
+              <image>docker.io/kalyan27/app-api-jib:v12</image>
               <auth>
                 <username>kalyan27</username>
                 <password>Kalbob@27</password>
