--- a/app-api/src/test/resources/application-it.yml
+++ b/app-api/src/test/resources/application-it.yml
@@ -16,7 +16,7 @@ spring:
     exclude:
       - org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
   datasource:
-    url: jdbc:mysql://localhost:3308/app_it_db?useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://${db.containerId:localhost}:3308/app_it_db?useSSL=false&allowPublicKeyRetrieval=true
   jpa:
     hibernate:
       ddl-auto: validate
