--- a/app-api/pom.xml
+++ b/app-api/pom.xml
@@ -94,6 +94,12 @@
       <artifactId>flyway-core</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.elasticsearch.client</groupId>
+      <artifactId>elasticsearch-rest-high-level-client</artifactId>
+      <version>6.4.3</version>
+    </dependency>
+
     <!-- app-client -->
     <dependency>
       <groupId>com.kalbob</groupId>
