--- a/app-api/src/main/resources/application-local.yml
+++ b/app-api/src/main/resources/application-local.yml
@@ -48,7 +48,7 @@ spring:
     url: jdbc:mysql://${db.containerId:localhost}:3307/app_local_db?useSSL=false&allowPublicKeyRetrieval=true
   jpa:
     hibernate:
-      ddl-auto: validate
+      #ddl-auto: validate
 a:
   local_db
 ---
