--- a/app-api/src/main/resources/application-local.yml
+++ b/app-api/src/main/resources/application-local.yml
@@ -40,7 +40,7 @@ spring:
   profiles: local_db
   flyway:
     locations: classpath:db/migration
-    enabled: true
+    enabled: false
   autoconfigure:
     exclude:
       - org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
@@ -48,7 +48,7 @@ spring:
     url: jdbc:mysql://${db.containerId:localhost}:3307/app_local_db?useSSL=false&allowPublicKeyRetrieval=true
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create-drop
 a:
   local_db
 ---
